--- a/index.html
+++ b/index.html
@@ -358,6 +358,10 @@ novel zero-shot singing synthesis with only a speech prompt.
 				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/Hard/22222222 hello 22222222.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
 			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">h t t p colon slash slash teams slash sites slash T A G slash default dot aspx As always , any feedb ck , comments ,</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/Hard/h t t p colon slash slash teams slash sites slash T A G slash default dot aspx As always , any feedb.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
 				<td style="text-align: left;vertical-align:middle;width: 500px">config file must contain A , B , C , D , E , F , and G .</td>
 				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/Hard/config file must contain A , B , C , D , E , F , and G ..wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
@@ -404,129 +408,6 @@ novel zero-shot singing synthesis with only a speech prompt.
 
 </div>
 
-<div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
-	<h2 id="sr-samples" style="text-align: center;">Hard Case</h2>
-	<script src="lyric.js"></script>
-	<div class="table-responsive pt-3">
-		
-		<table class="table table-hover pt-2"> 
-		<thead>
-			<tr>
-				<th style="text-align: center">Lyric</th>
-				<th style="text-align: center">Prompt Type</th>
-				<th style="text-align: center">Prompt</th>
-				<th style="text-align: center">NaturalSpeech 2</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td style="text-align: center;vertical-align:middle;width: 300px"><div class="lyric1"></div></td>
-				<td style="text-align: center;vertical-align:middle;width: 150px">Speech</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 280px;"><source src="audio/singing/ref1.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio class="player1" controls="controls" style="width: 280px;"><source src="audio/singing/infer1.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			</tr>
-			<tr>
-				<td style="text-align: center;vertical-align:middle;width: 300px"><div class="lyric2"></div></td>
-				<td style="text-align: center;vertical-align:middle;width: 150px">Speech</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 280px;"><source src="audio/singing/ref2.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio class="player2" controls="controls" style="width: 280px;"><source src="audio/singing/infer2.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			</tr>
-			<tr>
-				<td style="text-align: center;vertical-align:middle;width: 300px"><div class="lyric3"></div></td>
-				<td style="text-align: center;vertical-align:middle;width: 150px">Singing</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 280px;"><source src="audio/singing/ref3.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio class="player3" controls="controls" style="width: 280px;"><source src="audio/singing/infer3.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			</tr>		
-		</tbody>
-		</table>
-	</div>
-</div>
-
-
-
-<div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
-	<h2 id="sr-samples" style="text-align: center;">Voice Conversion Samples</h2>
-	<script src="lyric.js"></script>
-	<div class="table-responsive pt-3">
-		
-		<table class="table table-hover pt-2"> 
-		<thead>
-			<tr>
-				<th style="text-align: center">Text</th>
-				<th style="text-align: center">Prompt</th>
-				<th style="text-align: center">Source</th>
-				<th style="text-align: center">NaturalSpeech 2</th>
-			</tr>
-		</thead>
-		<tbody>	
-			<tr>
-				<td style="text-align: left;vertical-align:middle;width: 500px">Traditions to overcome.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/vc/case1/ref.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/vc/case1/src.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/vc/case1/denoised.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			</tr>
-			<tr>
-				<td style="text-align: left;vertical-align:middle;width: 500px">The children the most blood-curdling ideas, to hate God, for instance.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/vc/case2/ref.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/vc/case2/src.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/vc/case2/denoised.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			</tr>	
-			<tr>
-				<td style="text-align: left;vertical-align:middle;width: 500px">Oh, Bartley, that old about my being hard!</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/vc/case3/ref.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/vc/case3/src.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/vc/case3/denoised.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			</tr>
-		</tbody>
-		</table>
-	</div>
-</div>
-
-
-<div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
-	<h2 id="sr-samples" style="text-align: center;">Speech Enhancement Samples</h2>
-	<script src="lyric.js"></script>
-	<div class="table-responsive pt-3">
-		
-		<table class="table table-hover pt-2"> 
-		<thead>
-			<tr>
-				<th style="text-align: center">Prompt</th>
-				<th style="text-align: center">Source</th>
-				<th style="text-align: center">Ground Truth</th>
-				<th style="text-align: center">NaturalSpeech 2</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/se/case1/prompt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/se/case1/noised.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/se/case1/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/se/case1/denoised.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			</tr>	
-			<tr>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/se/case2/prompt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/se/case2/noised.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/se/case2/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/se/case2/denoised.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			</tr>	
-			<tr>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/se/case3/prompt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/se/case3/noised.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/se/case3/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 250px;"><source src="audio/se/case3/denoised.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			</tr>
-		</tbody>
-		</table>
-	</div>
-</div>
-
-
-
-
-
-
-
 
 
 <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">	
@@ -538,19 +419,6 @@ novel zero-shot singing synthesis with only a speech prompt.
 	</p>
 </div>
 
-<div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">	
-	<h2 id=related-works style="text-align: center;">	
-		Other Related Works
-	</h2>
-	<p>
-		<a href="/naturalspeech/">NaturalSpeech: End-to-End Text to Speech Synthesis with Human-Level Quality</a>
-	</p>
-	
-	<p>
-		<a href="/">Speech research conducted at Microsoft Research Asia</a>
-	</p>
-
-</div>
 
 
 </article>
